# tinyspline-raylib

./: README.md  meson.build
source/: common.c  common.h  demo_eval.c  demo_eval.h  demo_frames.c  demo_frames.h  demo_interpolation.c  demo_interpolation.h  demo_samples.c  demo_samples.h  implementations.c  main.c
